# MolSim

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  molsim_ass5_task4.txt
input/: checker.txt  collision-assignment3.xml  drei-cuboids.json  dreieck-cuboid.json  eingabe-cuboid.txt  eingabe-cuboids.json  eingabe-cuboids.txt  eingabe-fallingDrops.xml  equilibrium.xml  membrane.xml  nano-scale-flow.xml  perdiodic-z-test.xml  periodic-z-test.xml  rayleigh-taylor-instability-big.xml  rayleigh-taylor-instability-small.xml  rayleigh-taylor-instabilliy-3D-small.xml  solecuboid.json  test-cuboids.xml  test.xml  ws1-input-sun.json  ws3-collision.xml  ws3-falling-drops.xml  ws4-falling-drop-equilibrium.xml  (+20 more)
src/: '  CMakeLists.txt  FileReader.h  MolSim.cpp  Particle.cpp  Particle.h  spdlogConfig.h
src/assignment1/: Forces.cpp  Gravity.cpp  Gravity.h  Numerical.cpp  StoermerVerlet.cpp  StoermerVerlet.h
src/computations/forces/: ForceComputations.cpp  ForceComputations.h  Forces.cpp  Forces.h
src/computations/positions/: PositionComputations.cpp  PositionComputations.h  Positions.cpp  Positions.h
src/computations/profile/: VelocityDensityProfile.cpp  VelocityDensityProfile.h
src/computations/temperatures/: TemperatureComputations.cpp  TemperatureComputations.h
src/computations/velocities/: Velocities.cpp  Velocities.h  VelocityComputations.cpp  VelocityComputations.h
src/forces/: Forces.cpp  Forces.h
src/inputReader/: FileReader.cpp  FileReader.h  JsonFileReader.cpp  JsonFileReader.h  ParticleGenerator.cpp  ParticleGenerator.h  TxtFileReader.cpp  TxtFileReader.h  XMLFileReader.cpp  XMLFileReader.h
src/inputReader/simParser/: simulation.cpp  simulation.h  simulation.xsd
src/inputReaders/: FileReader.h  TxtFileReader.cpp  TxtFileReader.h
src/io/inputReader/: CheckpointReader.cpp  CheckpointReader.h  FileReader.cpp  FileReader.h  JsonFileReader.cpp  JsonFileReader.h  ParticleGenerator.cpp  ParticleGenerator.h  TxtFileReader.cpp  TxtFileReader.h
src/io/inputReader/XMLReader/: ParameterParser.cpp  ParameterParser.h  XMLFileReader.cpp  XMLFileReader.h
src/io/inputReader/xml/: simulation.cpp  simulation.h  simulation.xsd
src/io/inputReader/xmlReader/: ParameterParser.cpp  ParameterParser.h  XMLFileReader.cpp  XMLFileReader.h
src/io/inputReader/xmlReader/xmlScheme/: simulation.cpp  simulation.h  simulation.xsd
src/io/outputWriter/: CheckpointWriter.cpp  CheckpointWriter.h  FileWriter.h  VTKWriter.cpp  VTKWriter.h  VelocityDensityProfileWriter.cpp  VelocityDensityProfileWriter.h  XYZWriter.cpp  XYZWriter.h
src/outputWriter/: FileWriter.h  VTKWriter.cpp  VTKWriter.h  XYZWriter.cpp  XYZWriter.h
src/particle/: Cell.cpp  Cell.h  PairParticleIterator.cpp  PairParticleIterator.h  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleContainerDirectSum.cpp  ParticleContainerDirectSum.h  ParticleContainerLinkedCell.cpp  ParticleContainerLinkedCell.h  ParticleIterator.h
src/particle/boundary/: Boundary.h
src/particle/cell/: Cell.cpp  Cell.h
src/particle/container/: ParticleContainer.h  ParticleContainerDirectSum.cpp  ParticleContainerDirectSum.h  ParticleContainerLinkedCell.cpp  ParticleContainerLinkedCell.h
src/particle/iterator/pairParticleIterator/: PairParticleIterator.h  PairParticleIteratorBoundaryNHalo.cpp  PairParticleIteratorBoundaryNHalo.h  PairParticleIteratorDirectSum.cpp  PairParticleIteratorDirectSum.h  PairParticleIteratorLinkedCell.cpp  PairParticleIteratorLinkedCell.h  PairParticleIteratorMembraneDiagonalNeighbor.cpp  PairParticleIteratorMembraneDiagonalNeighbor.h  PairParticleIteratorMembraneDirectNeighbor.cpp  PairParticleIteratorMembraneDirectNeighbor.h
src/particle/iterator/particleIterator/: ParticleIterator.cpp  ParticleIterator.h  ParticleIteratorDirectSum.cpp  ParticleIteratorDirectSum.h  ParticleIteratorLinkedCell.cpp  ParticleIteratorLinkedCell.h  ParticleIteratorNonFixedParticles.cpp  ParticleIteratorNonFixedParticles.h
src/planets/: Gravity.cpp  Gravity.h  StoermerVerlet.cpp  StoermerVerlet.h
src/simulation/: PlanetSimulation.cpp  PlanetSimulation.h  SimulationData.cpp  SimulationData.h  Simulator.cpp  Simulator.h
src/utils/: ArrayUtils.h  MaxwellBoltzmannDistribution.cpp  MaxwellBoltzmannDistribution.h
test/: CMakeLists.txt
test/computations/forces/: ForceComputationsTest.cpp
test/computations/positions/: PositionComputations.cpp  PositionComputationsTest.cpp
test/computations/temperatures/: TemperatureComputationsTest.cpp
test/computations/velocities/: BrownianMotionTest.cpp  VelocityComputationsTest.cpp
test/inputReader/: CheckpointWriterReaderTest.cpp  FileReaderTest.cpp  XMLFileReaderTest.cpp
test/io/: CheckpointWriterReaderTest.cpp
test/io/inputReader/: FileReaderTest.cpp  XMLFileReaderTest.cpp
test/io/outputWriter/: VelocityDensityProfilingTest.cpp
test/particle/: FixedParticleTest.cpp  ParticleContainerDirectSumTest.cpp  ParticleContainerLinkedCellTest.cpp  ParticleContainerTest.cpp  ParticleMembraneTest.cpp  ParticleNeighborsTest.cpp
(+227 files in other folders)
